--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.aris.server.GreetingServiceImpl</servlet-class>
+    <servlet-class>com.aris.server.ProcessMiningServletImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
