--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
       <version>2.2.1.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
