--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
           <classpathScope>compile+runtime</classpathScope>
           <!-- URL(s) that should be opened by DevMode (gwt:devmode). -->
           <startupUrls>
-            <startupUrl>umc.html</startupUrl>
+            <startupUrl>index.html</startupUrl>
           </startupUrls>
         </configuration>
       </plugin>
